--- a/跨域/node/src/cors.html
+++ b/跨域/node/src/cors.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    cors
     <script>
         // cors 跨域
         fetch('http://127.0.0.1:9527/index')
